# minicsp

./: CMakeLists.txt  README
core/: Cons.C  Cons.h  Main.C  Makefile  Solver.C  Solver.h  SolverTypes.h  cmdline.cpp  cmdline.hpp  cons.cpp  cons.hpp  main.cpp  nvalue.cpp  setcons.cpp  setcons.hpp  solver.cpp  solver.hpp  solvertypes.hpp  utils.cpp  utils.hpp
examples/: Makefile  golomb.cpp  graceful_graph.cpp  money.cpp
fz/: Makefile  flatzinc.cpp  flatzinc.hpp  lexer.lxx  main-fz.cpp  minicsp-mzn  parser.yxx  registry.cpp  registry.hpp  test_fcts.sh
minicsp/core/: Makefile  cons.cpp  solver.cpp  solver.hpp  solvertypes.hpp
minicsp/fz/: Makefile
minicsp/mtl/: Vec.h  template.mk
minicsp/test/: Makefile  arith.cpp  set.cpp  test.cpp  test.hpp
minicsp/xcsp/: Makefile  XMLParser.hh  minicsp_callback.hpp
minicsp/xcsp3/: Makefile  Tree.hpp  XCSP3MiniCSPCallbacks.h  XCSP3MiniCSPCallbacks.hpp  main-xcsp3.cpp
mtl/: template.mk
simp/: Makefile  main.cpp  simpsolver.cpp  simpsolver.hpp
test/: Main.C  Makefile  Test.C  Test.h  alldiff.cpp  arith.cpp  bt.C  bt.cpp  dom.C  dom.cpp  element.cpp  le.C  lex.cpp  lin.C  lin.cpp  main.cpp  nvalue.cpp  pb.C  pb.cpp  regular.cpp  schedule.cpp  set.cpp  test.cpp  test.hpp
xcsp/: Makefile  main-xcsp.cpp  minicsp_callback.hpp
